[tool.poetry]
name = "lime"
version = "0.1.0"
description = ""
authors = ["Luan Ademi <utray@student.kit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
matplotlib = "^3.9.1.post1"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"
scikit-image = "^0.24.0"
joblib = "^1.4.2"
jupyter = "^1.0.0"
numpy = "1.26.4"
normflows = "^1.7.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
